// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup buttons should be displayed vertically 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-vertical\\"><button type=\\"button\\" class=\\"nextui-button mock\\"><div class=\\"nextui-button-text\\">action1</div><style>
        .nextui-button {
          background: #0070f3;
          box-sizing: border-box;
          display: flex;
          align-items: center;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .nextui-button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .nextui-button:hover:before {
          opacity: 0;
        }
        .nextui-button:not(.nextui-button-disabled):active {
          transform: scale(0.97);
        }
        .nextui-button:hover,
        .nextui-button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .nextui-button-text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .nextui-button-text p,
        .nextui-button-text pre,
        .nextui-button-text div {
          margin: 0;
        }
        .nextui-button-text.nextui-button-text-left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .nextui-button-text.nextui-button-text-right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><button type=\\"button\\" class=\\"nextui-button mock\\"><div class=\\"nextui-button-text\\">action2</div><style>
        .nextui-button {
          background: #0070f3;
          box-sizing: border-box;
          display: flex;
          align-items: center;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .nextui-button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .nextui-button:hover:before {
          opacity: 0;
        }
        .nextui-button:not(.nextui-button-disabled):active {
          transform: scale(0.97);
        }
        .nextui-button:hover,
        .nextui-button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .nextui-button-text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .nextui-button-text p,
        .nextui-button-text pre,
        .nextui-button-text div {
          margin: 0;
        }
        .nextui-button-text.nextui-button-text-left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .nextui-button-text.nextui-button-text-right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(0.75rem * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button type=\\"button\\" class=\\"nextui-button mock\\"><div class=\\"nextui-button-text\\">action</div><style>
        .nextui-button {
          background: #17c964;
          box-sizing: border-box;
          display: flex;
          align-items: center;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 7px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .75rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 7px;
          --nextui-button-padding: 0.625rem;
          --nextui-button-height: 1.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #17c964;
        }
        .nextui-button:before {
          content: '';
          background: rgba(23, 201,100,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 7px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .nextui-button:hover:before {
          opacity: 0;
        }
        .nextui-button:not(.nextui-button-disabled):active {
          transform: scale(0.97);
        }
        .nextui-button:hover,
        .nextui-button:focus {
          background: rgba(23, 201,100,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .nextui-button-text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .nextui-button-text p,
        .nextui-button-text pre,
        .nextui-button-text div {
          margin: 0;
        }
        .nextui-button-text.nextui-button-text-left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .nextui-button-text.nextui-button-text-right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(0.75rem * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 2`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button type=\\"button\\" class=\\"nextui-button mock\\"><div class=\\"nextui-button-text\\">action</div><style>
        .nextui-button {
          background: rgba(23, 201,100,0.15);
          box-sizing: border-box;
          display: flex;
          align-items: center;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 7px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .75rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #17c964;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 7px;
          --nextui-button-padding: 0.625rem;
          --nextui-button-height: 1.5rem;
          --nextui-button-color: #17c964;
          --nextui-button-bg: rgba(23, 201,100,0.15);
        }
        .nextui-button:before {
          content: '';
          background: rgba(23, 201,100,0.25);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 7px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .nextui-button:hover:before {
          opacity: 0;
        }
        .nextui-button:not(.nextui-button-disabled):active {
          transform: scale(0.97);
        }
        .nextui-button:hover,
        .nextui-button:focus {
          background: rgba(23, 201,100,0.25);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .nextui-button-text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .nextui-button-text p,
        .nextui-button-text pre,
        .nextui-button-text div {
          margin: 0;
        }
        .nextui-button-text.nextui-button-text-left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .nextui-button-text.nextui-button-text-right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(0.75rem * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render correctly 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button type=\\"button\\" class=\\"nextui-button mock\\"><div class=\\"nextui-button-text\\">action</div><style>
        .nextui-button {
          background: #0070f3;
          box-sizing: border-box;
          display: flex;
          align-items: center;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .nextui-button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .nextui-button:hover:before {
          opacity: 0;
        }
        .nextui-button:not(.nextui-button-disabled):active {
          transform: scale(0.97);
        }
        .nextui-button:hover,
        .nextui-button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .nextui-button-text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .nextui-button-text p,
        .nextui-button-text pre,
        .nextui-button-text div {
          margin: 0;
        }
        .nextui-button-text.nextui-button-text-left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .nextui-button-text.nextui-button-text-right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(0.75rem * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render different variants 1`] = `ReactWrapper {}`;

exports[`ButtonGroup should render different variants 2`] = `
<NextUI - Button
  animated={true}
  auto={false}
  borderWeight="normal"
  bordered={false}
  className=""
  color="default"
  disabled={false}
  flat={false}
  ghost={false}
  htmlType="button"
  light={false}
  loaderType="default"
  loading={true}
  rounded={false}
  shadow={false}
  size="md"
>
  button
</NextUI - Button>
`;
